soql/grammar.js
    source_file: ($) => seq(
      repeat($.header_comment),
      $._soql_query_expression
    ),

    /**
     * Header comments appear at the very start of a SOQL file.
     * They use the // syntax (single-line comments).
     *
     * Note: This is different from formatting_comment (///) which can appear
     * anywhere in the query and is treated as an "extra".
     */
    header_comment: ($) => seq("//", /.*/),

    /**
     * Formatting comments use /// (triple slash) and can appear anywhere
     * in the query. They're used by some SOQL editors for formatting hints.
     * Defined in `extras` above, so they're automatically skipped during parsing.
     */
    _soql_query_expression: ($) => $.soql_query_body,

    /**
     * A subquery is a query wrapped in parentheses, used in:
     *   - SELECT clauses: (SELECT Name FROM Contacts)
     *   - WHERE IN clauses: WHERE Id IN (SELECT AccountId FROM Contact)
     */
    subquery: ($) => seq("(", $.soql_query_body, ")"),

    /**
     * The main query body containing all clauses.
     *
     * Clause order follows the SOQL specification:
     *   SELECT → FROM → USING → WHERE → WITH → GROUP BY → ORDER BY →
     *   LIMIT → OFFSET → FOR → UPDATE → ALL ROWS
     *
     * Only SELECT and FROM are required. All other clauses are optional.
     *
     * @see https://developer.salesforce.com/docs/atlas.en-us.soql_sosl.meta/
     *      soql_sosl/sforce_api_calls_soql_select.htm
     */
    soql_query_body: ($) => seq(
      field("select_clause", $.select_clause),
      field("from_clause", $.from_clause),
      optional(field("using_clause", $.using_clause)),
      optional(field("where_clause", $.where_clause)),
      optional(field("with_clause", alias($.soql_with_clause, $.with_clause))),
      optional(field("group_by_clause", $.group_by_clause)),
      optional(field("order_by_clause", $.order_by_clause)),
      optional(field("limit_clause", $.limit_clause)),
      optional(field("offset_clause", $.offset_clause)),
      optional(field("for_clause", $.for_clause)),
      optional(field("update_clause", $.update_clause)),
      optional(field("all_rows_clause", $.all_rows_clause)),
    ),

    // =========================================================================
    // SELECT CLAUSE
    // =========================================================================

    /**
     * The SELECT clause specifies which fields to retrieve.
     *
     * Can contain:
     *   - Field names: SELECT Id, Name
     *   - Aggregate functions: SELECT COUNT(Id), SUM(Amount)
     *   - COUNT(): SELECT COUNT() (special case — no field argument)
     *   - Subqueries: SELECT (SELECT Name FROM Contacts)
     *   - TYPEOF: SELECT TYPEOF Owner WHEN User THEN ... END
     *   - FIELDS(): SELECT FIELDS(ALL)
     */
    select_clause: ($) => seq(
      ci("SELECT"),
      choice(
        // COUNT() is a special case — a standalone aggregate with no field
        $.count_expression,
        // Normal: comma-separated list of selectable expressions
        commaJoined1($._selectable_expression)
      )
    ),

    /**
     * COUNT() expression — the only aggregate that can stand alone
     * without any other fields in the SELECT clause.
     *
     * Example: SELECT COUNT() FROM Account
     */
    count_expression: ($) => seq($._function_name, "(", ")"),

    /**
     * Any expression that can appear in a SELECT clause.
     * This is a "hidden" rule (underscore prefix) — it won't appear
     * as a node in the tree; one of its children will appear instead.
     * WHY? We want to group all valid select expressions logically in the grammar
     * without cluttering the output syntax tree with an extra `_selectable_expression` node layer.
     */
    _selectable_expression: ($) => choice(
      $._value_expression,      // Field or function: Name, SUM(Amount)
      $.alias_expression,       // Function with alias: SUM(Amount) total
      $.type_of_clause,         // TYPEOF Owner WHEN User THEN ...
      $.fields_expression,      // FIELDS(ALL), FIELDS(CUSTOM), FIELDS(STANDARD)
      $.subquery                // (SELECT Name FROM Contacts)
    ),

    // =========================================================================
    // FROM CLAUSE
    // =========================================================================

    /**
     * The FROM clause specifies which sObject(s) to query.
     *
     * Examples:
     *   FROM Account
     *   FROM Contact c             (with alias)
     *   FROM Contact AS c          (with explicit AS alias)
     *   FROM Account, Contact      (comma-separated, rare)
     */
    from_clause: ($) => seq(
      ci("FROM"),
      commaJoined1(choice($.storage_identifier, $.storage_alias))
    ),

    /**
     * An sObject reference — simple or dotted identifier.
     * Simple: Account, Contact, My_Custom_Object__c
     * Dotted: (rare, used in certain SOQL contexts)
     */
    storage_identifier: ($) => choice($.identifier, $.dotted_identifier),

    /**
     * An sObject with an alias for use in the rest of the query.
     * The AS keyword is optional.
     *
     * Examples:
     *   FROM Contact c         (implicit alias)
     *   FROM Contact AS c      (explicit alias)
     */
    using_clause: ($) => seq(
      ci("USING"),
      choice($.using_scope_clause, $.using_lookup_clause)
    ),

    using_scope_clause: ($) => seq(ci("SCOPE"), $.using_scope_type),

    using_scope_type: ($) => choice(
      ci("delegated"),
      ci("everything"),
      ci("mine"),
      ci("mine_and_my_groups"),
      ci("my_territory"),
      ci("my_team_territory"),
      ci("team")
    ),

    /**
     * Search filter lookup variant of USING clause.
     *
     * Example:
     *   USING LOOKUP AppId IN ('v1', 'v2') BIND AppId = :boundVar
     */
    using_lookup_clause: ($) => seq(
      ci("LOOKUP"),
      field("field", $.identifier),
      ci("IN"),
      "(",
      commaJoined1($.string_literal),
      ")",
      ci("BIND"),
      field("target", $.identifier),
      "=",
      choice($.bind_variable, $._value_expression)
    ),

    // =========================================================================
    // WHERE CLAUSE — Boolean Expressions
    // =========================================================================

    /**
     * The WHERE clause filters which records are returned.
     *
     * Examples:
     *   WHERE Name = 'Test'
     *   WHERE Name = 'Test' AND Industry = 'Tech'
     *   WHERE NOT IsDeleted = TRUE
     *   WHERE (Name = 'A' OR Name = 'B') AND Industry = 'Tech'
     */
    where_clause: ($) => seq(ci("WHERE"), $._boolean_expression),

    /**
     * A boolean expression — the building block of WHERE clauses.
     * Can be: AND, OR, NOT, or a single comparison.
     */
    _boolean_expression: ($) => choice(
      $.and_expression,
      $.or_expression,
      $.not_expression,
      $._condition_expression
    ),

    /**
     * AND expression — two or more conditions joined by AND.
     * Example: Name = 'Test' AND Industry = 'Tech' AND IsActive = TRUE
     */
    comparison_expression: ($) => seq(
      $._value_expression,
      $._comparison
    ),

    _comparison: ($) => choice($._value_comparison, $._set_comparison),

    /**
     * Value comparison: field OPERATOR value
     * Operators: =, !=, <>, <, <=, >, >=, LIKE
     */
    record_visibility_context_clause: ($) => seq(
      ci("RecordVisibilityContext"),
      "(",
      commaJoined1($.record_visibility_parameter),
      ")"
    ),

    record_visibility_parameter: ($) => seq(
      field("key", $.identifier),
      "=",
      field("value", choice($.int, $.decimal, $.string_literal, $.boolean))
    ),

    /**
     * Data category filter for knowledge article queries.
     *
     * Format: group operator category
     * Example: Geography__c AT USA__c
     * Example: Product__c ABOVE (Phones__c, Computers__c)
     */
    group_by_clause: ($) => seq(
      ci("GROUP"),
      ci("BY"),
      choice(
        commaJoined1($._group_by_field),
        seq(ci("ROLLUP"), "(", commaJoined1($._group_by_field), ")"),
        seq(ci("CUBE"), "(", commaJoined1($._group_by_field), ")"),
      ),
      optional($.having_clause)
    ),

    _group_by_field: ($) => choice(
      $.field_identifier,
      $.date_function,
      $.function_expression
    ),

    /**
     * HAVING clause — filter on aggregate results (like SQL HAVING).
     *
     * Example:
     *   GROUP BY StageName HAVING COUNT(Id) > 5
     */
    having_clause: ($) => seq(ci("HAVING"), $._boolean_expression),

    // =========================================================================
    // ORDER BY CLAUSE
    // =========================================================================

    /**
     * ORDER BY clause — sort results.
     *
     * Examples:
     *   ORDER BY Name
     *   ORDER BY Name ASC
     *   ORDER BY Name DESC NULLS LAST
     *   ORDER BY CreatedDate DESC, Name ASC
     */
    order_by_clause: ($) => seq(
      ci("ORDER"),
      ci("BY"),
      commaJoined1($.order_expression)
    ),

    order_expression: ($) => seq(
      $._value_expression,
      optional($.order_direction),
      optional($.order_null_direction)
    ),

    order_direction: ($) => choice(ci("ASC"), ci("DESC")),
    order_null_direction: ($) => choice(ci("NULLS FIRST"), ci("NULLS LAST")),

    // =========================================================================
    // LIMIT, OFFSET, FOR, UPDATE CLAUSES
    // =========================================================================

    /** LIMIT clause — restrict number of returned records. */
    limit_clause: ($) => seq(ci("LIMIT"), $.int),

    /** OFFSET clause — skip the first N records. */
    offset_clause: ($) => seq(ci("OFFSET"), $.int),

    /** FOR clause — lock records (FOR UPDATE) or tracking. */
    for_clause: ($) => seq(ci("FOR"), commaJoined1($.for_type)),
    for_type: ($) => choice(ci("UPDATE"), ci("REFERENCE"), ci("VIEW")),

    /** UPDATE clause — enable tracking (UPDATE TRACKING/VIEWSTAT). */
    all_rows_clause: ($) => seq(ci("ALL"), ci("ROWS")),

    // =========================================================================
    // TYPEOF CLAUSE
    // =========================================================================

    /**
     * TYPEOF clause — handle polymorphic relationships.
     *
     * In Salesforce, some fields can reference different sObject types.
     * TYPEOF lets you query different fields depending on the actual type.
     *
     * Example:
     *   SELECT TYPEOF Owner
     *     WHEN User THEN Username, Email
     *     WHEN Group THEN Name
     *   END
     *   FROM Case
     */
    fields_expression: ($) => seq(ci("FIELDS"), "(", $.fields_type, ")"),
    fields_type: ($) => choice(ci("ALL"), ci("CUSTOM"), ci("STANDARD")),

    // =========================================================================
    // VALUE EXPRESSIONS AND FUNCTIONS
    // =========================================================================

    /**
     * A value expression — a field reference, date function, scalar function, timezone conversion, formula expression, or general function call.
     * Used in SELECT, WHERE, ORDER BY, and GROUP BY clauses.
     */
    _value_expression: ($) => choice(
      $.date_function,
      $.scalar_function,
      $.convert_timezone_call,
      $.function_expression,
      $.formula_expression,
      $.field_identifier
    ),

    /**
     * SOQL Date Functions — extract date/time components.
     * Can appear in SELECT and GROUP BY clauses.
     *
     * Examples:
     *   CALENDAR_MONTH(CloseDate)
     *   FISCAL_YEAR(CloseDate)
     *   DAY_ONLY(CreatedDate)
     *   HOUR_IN_DAY(convertTimezone(CreatedDate))
     */
    scalar_function: ($) => seq(
      field("name", $.scalar_function_name),
      "(",
      field("argument", choice($.field_identifier, $.function_expression, $.date_function, $.convert_timezone_call)),
      ")"
    ),

    scalar_function_name: ($) => choice(
      ci("FORMAT"),
      ci("convertCurrency"),
      ci("toLabel"),
      ci("GROUPING"),
    ),

    /**
     * convertTimezone() function — converts datetime to user's timezone.
     *
     * Examples:
     *   convertTimezone(CreatedDate)
     *   convertTimezone(Account.CreatedDate)
     */
    function_expression: ($) => seq(
      $._function_name,
      "(",
      commaJoined1($._value_expression),
      ")"
    ),

    /**
     * FORMULA() expression — evaluates dynamic formula expressions
     * in WHERE and HAVING clauses (Summer '26 SOQL feature).
     *
     * Examples:
     *   WHERE FORMULA('Birthdate + 365') > TODAY
     *   WHERE FORMULA('BillingState') = 'CA'
     */
    formula_expression: ($) => seq(
      ci("FORMULA"),
      "(",
      field("expression", choice($.string_literal, $._value_expression)),
      ")"
    ),

    /**
     * Alias expression — a value expression followed by an alias name.
     *
     * Example: SUM(Amount) total
     *          ^^^^^^^^^^^ ^^^^^ alias
     *          value expr
     */
    alias_expression: ($) => seq($._value_expression, $.identifier),

    // =========================================================================
    // IDENTIFIERS
    // =========================================================================

    /**
     * A dotted identifier — used for relationship field paths.
     *
     * Examples:
     *   Account.Name        (parent field)
     *   Owner.Profile.Name  (multi-level parent)
     *   parent1__r.Name     (custom relationship)
     */
    dotted_identifier: ($) => seq(
      $.identifier, repeat1(seq(".", $.identifier))
    ),

    /**
     * A field identifier — simple or dotted.
     */
    field_identifier: ($) => choice($.identifier, $.dotted_identifier),

    /**
     * A list of field names (used in TYPEOF WHEN...THEN clauses).
     */
    _function_name: ($) => field("function_name", $.identifier),

    // =========================================================================
    // OPERATORS
    // =========================================================================

    /**
     * Value comparison operators: =, !=, <>, <, <=, >, >=, LIKE
     *
     * Note: <> is an alternative to != (both mean "not equal").
     * LIKE supports % (multi-char wildcard) and _ (single-char wildcard).
     */
    value_comparison_operator: ($) => choice(
      "=", "!=", "<>", "<", "<=", ">", ">=", ci("LIKE")
    ),

    /**
     * Set comparison operators: IN, NOT IN, INCLUDES, EXCLUDES
     *
     * IN/NOT IN: Check if a value is in a set of values or subquery results
     * INCLUDES/EXCLUDES: Used with multi-select picklist fields
     */
    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,

    /** Integer literal */
    int: ($) => /\d+/,

    /** Decimal literal (optional negative, optional fractional part) */
    boolean: ($) => choice(ci("TRUE"), ci("FALSE")),

    /** NULL literal */
    bind_variable: ($) => seq(":", $.identifier),

    /** Currency literal — 3-letter code + number (e.g., USD100.50) */
    identifier: ($) => /[A-Za-z][A-Za-z\d_]*/,
  },
});
