soql/test/corpus/basic-queries.txt
==================
Simple SELECT with one field
==================

SELECT Id FROM Account

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
SELECT with multiple fields
==================

SELECT Id, Name, Email FROM Contact

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier))
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
SELECT with parent relationship field
==================

SELECT Id, Name, Account.Name FROM Contact

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier))
      (field_identifier (dotted_identifier (identifier) (identifier))))
    (from_clause
      (storage_identifier (identifier)))))

==================
SELECT with custom relationship
==================

SELECT Id, parent1__r.Name FROM Junction__c

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (dotted_identifier (identifier) (identifier))))
    (from_clause
      (storage_identifier (identifier)))))

==================
Case insensitive keywords
==================

select id from account

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
Mixed case keywords
==================

Select Id From Account

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
COUNT expression
==================

SELECT COUNT() FROM Account

---

(source_file
  (soql_query_body
    (select_clause
      (count_expression
        (identifier)))
    (from_clause
      (storage_identifier (identifier)))))

==================
FIELDS expression
==================

SELECT FIELDS(ALL) FROM Account LIMIT 200

---

(source_file
  (soql_query_body
    (select_clause
      (fields_expression
        (fields_type)))
    (from_clause
      (storage_identifier (identifier)))
    (limit_clause
      (int))))

==================
Deep multi-level parent relationship fields
==================

SELECT Id, Contact.Account.Owner.Manager.Name FROM Opportunity

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier
        (dotted_identifier
          (identifier)
          (identifier)
          (identifier)
          (identifier)
          (identifier))))
    (from_clause
      (storage_identifier (identifier)))))

==================
Escaped quote strings in query
==================

SELECT Id, Name FROM Account WHERE Name = 'O\'Reilly'

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (string_literal)))))

==================
Multiple child subqueries in SELECT
==================

SELECT Id, Name, (SELECT Id, LastName FROM Contacts), (SELECT Id, Amount FROM Opportunities) FROM Account

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier))
      (subquery
        (soql_query_body
          (select_clause
            (field_identifier (identifier))
            (field_identifier (identifier)))
          (from_clause
            (storage_identifier (identifier)))))
      (subquery
        (soql_query_body
          (select_clause
            (field_identifier (identifier))
            (field_identifier (identifier)))
          (from_clause
            (storage_identifier (identifier))))))
    (from_clause
      (storage_identifier (identifier)))))
