soql/test/corpus/clauses.txt
==================
ORDER BY single field
==================

SELECT Name FROM Account ORDER BY Name

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (order_by_clause
      (order_expression
        (field_identifier (identifier))))))

==================
ORDER BY with direction
==================

SELECT Name FROM Account ORDER BY Name DESC

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (order_by_clause
      (order_expression
        (field_identifier (identifier))
        (order_direction)))))

==================
ORDER BY with NULLS LAST
==================

SELECT Name FROM Account ORDER BY Name ASC NULLS LAST

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (order_by_clause
      (order_expression
        (field_identifier (identifier))
        (order_direction)
        (order_null_direction)))))

==================
LIMIT clause
==================

SELECT Name FROM Account LIMIT 10

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (limit_clause
      (int))))

==================
OFFSET clause
==================

SELECT Id FROM Account LIMIT 10 OFFSET 20

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (limit_clause
      (int))
    (offset_clause
      (int))))

==================
GROUP BY clause
==================

SELECT StageName, COUNT(Id) FROM Opportunity GROUP BY StageName

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (function_expression
        (identifier)
        (field_identifier (identifier))))
    (from_clause
      (storage_identifier (identifier)))
    (group_by_clause
      (field_identifier (identifier)))))

==================
FOR UPDATE clause
==================

SELECT Id FROM Account FOR UPDATE

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (for_clause
      (for_type))))

==================
WITH USER_MODE
==================

SELECT Name FROM Account WITH USER_MODE

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (with_clause
      (with_type))))

==================
ALL ROWS clause simple
==================

SELECT Id, Name FROM Account ALL ROWS

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (all_rows_clause)))

==================
ALL ROWS clause with WHERE and LIMIT
==================

SELECT Id FROM Opportunity WHERE IsDeleted = true LIMIT 50 ALL ROWS

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (boolean)))
    (limit_clause
      (int))
    (all_rows_clause)))

==================
ALL ROWS clause with WHERE on IsArchived
==================

SELECT Id FROM Task WHERE IsArchived = true ALL ROWS

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (field_identifier (identifier))
        (value_comparison_operator)
        (boolean)))
    (all_rows_clause)))

==================
ALL ROWS clause combined with WHERE, ORDER BY, and LIMIT
==================

SELECT Id, Name, IsDeleted FROM Opportunity WHERE FORMULA('Amount * 1.1') > 50000 ORDER BY CloseDate DESC LIMIT 100 ALL ROWS

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier))
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (where_clause
      (comparison_expression
        (formula_expression
          (string_literal))
        (value_comparison_operator)
        (int)))
    (order_by_clause
      (order_expression
        (field_identifier (identifier))
        (order_direction)))
    (limit_clause
      (int))
    (all_rows_clause)))

==================
USING SCOPE clause
==================

SELECT Id, Name FROM Account USING SCOPE Mine

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier))
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (using_clause
      (using_scope_clause
        (using_scope_type)))))

==================
USING LOOKUP with bind variable
==================

SELECT Id FROM ServiceApp USING LOOKUP AppId IN ('v1', 'v2') BIND AppId = :boundVar

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (using_clause
      (using_lookup_clause
        (identifier)
        (string_literal)
        (string_literal)
        (identifier)
        (bind_variable
          (identifier))))))

==================
USING LOOKUP with field expression
==================

SELECT Id FROM ServiceApp USING LOOKUP AppId IN ('v1') BIND AppId = TargetField

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (using_clause
      (using_lookup_clause
        (identifier)
        (string_literal)
        (identifier)
        (field_identifier (identifier))))))

==================
WITH RecordVisibilityContext single parameter
==================

SELECT Id FROM Contact WITH RecordVisibilityContext(maxDescribeValueLength=100)

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (with_clause
      (record_visibility_context_clause
        (record_visibility_parameter
          (identifier)
          (int))))))

==================
WITH RecordVisibilityContext multiple parameters
==================

SELECT Id FROM Contact WITH RecordVisibilityContext(maxDescribeValueLength=20, enforceVisibility=true)

---

(source_file
  (soql_query_body
    (select_clause
      (field_identifier (identifier)))
    (from_clause
      (storage_identifier (identifier)))
    (with_clause
      (record_visibility_context_clause
        (record_visibility_parameter
          (identifier)
          (int))
        (record_visibility_parameter
          (identifier)
          (boolean))))))
